[package]
name = "librec"
version = "0.1.0"
authors = ["HiGuy Smith <higuymb@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.13.0"
nom = "5.0.0"
regex = "1.1.9"
wasm-bindgen = "^0.2.47"
cfg-if = "0.1.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
error-chain = "0.12"

[lib]
crate-type = ["cdylib", "rlib"]
